<?xml version="1.0" encoding="utf-8"?>
<com.b3dgs.surftracking.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:orientation="vertical"
                                     android:padding="1dp">

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/date_icon"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:contentDescription="@string/session"
               android:scaleType="centerCrop"
               android:visibility="invisible"/>

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/score"
               android:layout_width="8dp"
               android:layout_height="8dp"
               android:layout_marginStart="2dp"
               android:layout_marginTop="2dp"
               android:background="@drawable/rank"
               android:contentDescription="@string/score"
               android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="16dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                   android:id="@+id/height5"
                   android:layout_width="16dp"
                   android:layout_height="4dp"
                   android:background="@drawable/line"
                   android:contentDescription="@string/height"
                   android:visibility="invisible"/>

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                   android:id="@+id/height4"
                   android:layout_width="16dp"
                   android:layout_height="4dp"
                   android:background="@drawable/line"
                   android:contentDescription="@string/height"
                   android:visibility="invisible"/>

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                   android:id="@+id/height3"
                   android:layout_width="16dp"
                   android:layout_height="4dp"
                   android:background="@drawable/line"
                   android:contentDescription="@string/height"
                   android:visibility="invisible"/>

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                   android:id="@+id/height2"
                   android:layout_width="16dp"
                   android:layout_height="4dp"
                   android:background="@drawable/line"
                   android:contentDescription="@string/height"
                   android:visibility="invisible"/>

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                   android:id="@+id/height1"
                   android:layout_width="16dp"
                   android:layout_height="4dp"
                   android:background="@drawable/line"
                   android:contentDescription="@string/height"
                   android:visibility="invisible"/>

    </LinearLayout>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/date"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:alpha="128"
              android:gravity="bottom"
              android:textAlignment="center"
              android:textColor="@android:color/darker_gray"
              android:textSize="13sp"
              android:textStyle="normal"/>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/name"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:textSize="14sp"
              android:textStyle="bold"
              android:visibility="invisible"/>

</com.b3dgs.surftracking.SquareLayout>
